--- a/css/tsstyle.css
+++ b/css/tsstyle.css
@@ -1,9 +1,4 @@
 
-*{
-	
-	margin: 0;
-	padding: 0;	
-}
 nav{
 	border-top:3px solid #ff3300;
 }
@@ -13,7 +8,7 @@ nav{
 }
 .changebackground{
 	width: 100%;
-	height: 90vh;
+	height: 100vh;
 	background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.1)), url('../img/tiger.jpg');
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
@@ -31,8 +26,6 @@ main{
 	color: #fff;
 }
 
-/*background-color: #031206;
-background-image: linear-gradient(180deg, #031206 25%, #08500a 100%);*/
 section h3{
 	font-size: 35px;
 	font-weight: 200;
@@ -93,10 +86,10 @@ section .btntwo{
 
 @keyframes changetext{
 	0%{ content: "Delhi"; }
-	20%{content: "Madhya Pradesh";}
+	20%{content: "M.P.";}
 	35%{content: "Bengal";}
 	60%{content: "Jaipur";}
-	80%{content: "Rajasthan";}
+	80%{content: "Gujrat";}
 	100%{content: "Uttarakhand";}
 }
 /*#change_background:after{
@@ -208,12 +201,13 @@ ol li{
 }
 .tr_i{color:#ff471a; font-size: 2rem; }
 
+
 ol li:before{
 	content: " ";
-	height: inherit;
-	width: inherit;
+	/*height: inherit;
+	width: inherit;*/
 	background-color: #ff471a;
-	border-radius: 50%;
+	/*border-radius: 50%;*/
 	position: absolute;
 	opacity: 0;
 	transition: all 0.3s linear;
